--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <section class="flexible-container">
-        <div class="half-width">
+        <div id="skip" class="half-width">
             <h1><span class="green-color">Skip</span> The Diet,</h1>
             <h1>Just Eat Healthy</h1>
             <h1>With Food Network</h1>
@@ -67,19 +67,24 @@
             </div>
         </div>
 
-
-
-
     </section>
-    <div id="social-media">
+    <div id="social-media" class="flexible-container">
 
-        <h1><span>700k</span></h1>
-        <p>Youtube Subscribers</p>
-        <h1>2.4m</h1>
-        <h4>Instagram Followers</h4>
-        <h1>100k</h1>
-        <h4>Dribbble Shot Likes</h4>
+        <div class="half-width">
+            <h1>700k</h1>
+            <h4>Youtube Subscribers</h4>
+        </div>
+        <div class="half-width">
+            <h1>2.4m</h1>
+            <h4>Instagram Followers</h4>
+        </div>
+        <div class="half-width">
+            <h1>100k</h1>
+            <h4>Dribbble Shot Likes</h4>
+        </div>
     </div>
+
+
     <footer>
         <h1><span class="green-color">Food Court</span> Network</h1>
         <p>Eat healthy to live healthy. Live healthy to live happy</p>
