--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div id="skip" class="half-width">
             <h1><span class="green-color">Skip</span> The Diet,</h1>
             <h1>Just Eat Healthy</h1>
-            <h1>With Food Network</h1>
+            <h1>With Food Court Network</h1>
             <p>Imagine you don't need a diet because we provide
 
                 healthy and delicious food for you!</p>
