--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 
                 healthy and delicious food for you!</p>
             <br>
-            <a class="link-button" target="_blank" href="www.gppgle.com">ORDER FOOD</a>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/imran-ahmed-337681196/">ORDER
+                FOOD</a>
         </div>
         <div class="half-width">
             <img src="images/1st.png" alt="">
@@ -38,7 +39,8 @@
             <p>Hi we are providing dietiing food national and internationally. we have ten food court in Bangladesh. In
                 the main time we are pussing pandamic. So in this time we are providing two types of delivery systems
                 thats one offline delivery and another one online delivery.</p><br>
-            <a class="link-button" target="_blank" href="www.gppgle.com">Contact Me</a>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/imran-ahmed-337681196/">Contact
+                Me</a>
         </div>
     </section>
     <section class="recipie-area">
