--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
     <footer>
         <h1><span class="green-color">Food Court</span> Network</h1>
-        <p>Eat healthy to live healthy. Live healthy to live happy</p>
+        <p>Eat healthy to live healthy. Live healthy to live happy. @ I love programmingHero</p>
     </footer>
 
 
